# Mailspring-Sync

./: .gitignore  CMakeLists.txt
MailSync/: ExternalCardDAVWorker.cpp  ExternalCardDAVWorker.hpp  MailUtils.cpp  MetadataWorker.cpp  TaskProcessor.cpp  VCard.cpp  VCard.hpp  main.cpp
